--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "angular": "1.6.3",
     "angular-animate": "1.6.3",
     "angular-chart.js": "1.1.1",
+    "angular-fluig": "1.0.3",
     "chart.js": "2.5.0",
     "components-font-awesome": "4.7.0",
     "moment": "2.18.1"
